fix display of items in header on mobile

--- a/styles/_buttons.scss
+++ b/styles/_buttons.scss
@@ -47,3 +47,9 @@
     width: 100%;
     border-radius: var(--border-radius--md);
 }
+
+@media (max-width: 768px) {
+    .js-open-menu {
+        margin-right: 1.5rem;
+    }
+}
