--- a/styles/_grid.scss
+++ b/styles/_grid.scss
@@ -282,6 +282,10 @@
         display: none !important;
     }
 
+    .d-md-block {
+        display: block !important;
+    }
+
 }
 
 @media (min-width: 992px) {
