--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -171,6 +171,10 @@
     padding-bottom: 2.5rem;
 }
 
+.ps-none {
+    padding-left: 0;
+}
+
 .ps-sm {
     padding-left: 1rem;
 }
